envoy-config.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-config
data:
  envoy.yaml: |
    static_resources:
      listeners:
        - name: listener_0
          address:
            socket_address:
              address: "::"           # Listen on all IPv6 interfaces
              port_value: 8080
          filter_chains:
            - filters:
                - name: envoy.filters.network.http_connection_manager
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                    stat_prefix: ingress_http
                    route_config:
                      name: local_route
                      virtual_hosts:
                        - name: backend
                          domains: ["*"]
                          routes:
                            - match:
                                prefix: "/"
                              route:
                                cluster: service_cluster
                    http_filters:
                      - name: envoy.filters.http.router
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                    access_log:
                      - name: envoy.access_loggers.file
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                          path: "/dev/stdout"
                          log_format:
                            json_format:
                              start_time: "%START_TIME%"
                              method: "%REQ(:METHOD)%"
                              path: "%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%"
                              protocol: "%PROTOCOL%"
                              response_code: "%RESPONSE_CODE%"
                              response_flags: "%RESPONSE_FLAGS%"
                              upstream_host: "%UPSTREAM_HOST%"
                              upstream_cluster: "%UPSTREAM_CLUSTER%"
                              downstream_remote_address: "%DOWNSTREAM_REMOTE_ADDRESS%"
                              requested_server_name: "%REQUESTED_SERVER_NAME%"
                              upstream_service_time: "%RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)%"
      clusters:
        - name: service_cluster
          connect_timeout: 1s
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          load_assignment:
            cluster_name: service_cluster
            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: "2600:1f14:1341:b900::5b0"
                          port_value: 80
                locality:
                  region: us-west-2
                  zone: us-west-2b
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: "2600:1f14:1341:b901::d831"
                          port_value: 80
                locality:
                  region: us-west-2
                  zone: us-west-2d
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: "2600:1f14:1341:b902::ce6a"
                          port_value: 80
                locality:
                  region: us-west-2
                  zone: us-west-2a
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: "2600:1f14:1341:b900::5ac"
                          port_value: 80
                locality:
                  region: us-west-2
                  zone: us-west-2b
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: "2600:1f14:1341:b901::f10c"
                          port_value: 80
                locality:
                  region: us-west-2
                  zone: us-west-2d
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: "2600:1f14:1341:b902::8539"
                          port_value: 80
                locality:
                  region: us-west-2
                  zone: us-west-2a
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: "2600:1f14:1341:b901::22f5"
                          port_value: 80
                locality:
                  region: us-west-2
                  zone: us-west-2d
          common_lb_config:
            locality_weighted_lb_config: {}   
    admin:
      access_log_path: "/tmp/admin_access.log"
      address:
        socket_address:
          address: "::1"                 # IPv6 loopback address for admin
          port_value: 9901
